--- a/bedrock/mozorg/templates/mozorg/mission.html
+++ b/bedrock/mozorg/templates/mozorg/mission.html
@@ -40,7 +40,11 @@
   <h1 class="title-shadow-box">{{ _('We’re building a better Internet') }}</h1>
 
   <div class="main">
+    {% if l10n_has_tag('bug_1251061_copy_update') %}
+    <p>{{ _('Our mission is to ensure the Internet is a global public resource, open and accessible to all. An Internet that truly puts people first, where individuals can shape their own experience and are empowered, safe and independent.') }}</p>
+    {% else %}
     <p class="lede">{{ _('Our mission is to promote openness, innovation & opportunity on the Web.') }}</p>
+    {% endif %}
     <p>{{ _('At Mozilla, we’re a global community of technologists, thinkers and builders working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web.') }}
     {{ _('We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.') }}</p>
     <p>{{ _('Read the <a href="%(url)s">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.') | format(url=url('mozorg.about.manifesto')) }}</p>
