--- a/bedrock/mozorg/templates/mozorg/home/includes/upcoming-events.html
+++ b/bedrock/mozorg/templates/mozorg/home/includes/upcoming-events.html
@@ -50,7 +50,7 @@
       {% endfor %}
       </ul>
     </div>
-    <a class="more-large" href="{{ url('mozorg.contribute.events') }}">{{ _('See all events') }}</a>
+    <a class="more-large" href="{{ url('mozorg.contribute.events') }}" data-link-type="button" data-link-name="See all events">{{ _('See all events') }}</a>
   </div>
 </section>
 {% endif %}
