--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -79,7 +79,7 @@
   <div class="container">
     {% block tabzilla_tab %}
       <div id="tabzilla">
-        <a href="{{ url('mozorg.home') }}">Mozilla</a>
+        <a href="{{ url('mozorg.home') }}" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
       </div>
     {% endblock %}
 
@@ -88,16 +88,16 @@
         <span class="toggle" role="button" aria-controls="nav-main-menu" aria-expanded="false" tabindex="0">{{_('Menu')}}</span>
         <ul id="nav-main-menu">
           <li class="first about-item">
-            <a data-link-type="about" data-element-location="nav click" href="{{ url('mozorg.about') }}">{{_('About')}}</a>
+            <a href="{{ url('mozorg.about') }}" data-link-type="nav" data-link-name="About">{{_('About')}}</a>
           </li>
           <li class="contribute-item">
-            <a data-link-type="participate" data-element-location="nav click" href="{{ url('mozorg.contribute') }}">{{_('Participate')}}</a>
+            <a href="{{ url('mozorg.contribute') }}" data-link-type="nav" data-link-name="Participate">{{_('Participate')}}</a>
           </li>
           <li class="products-item">
-            <a data-link-type="firefox" data-element-location="nav click" href="{{ url('firefox.family.index') }}">{{_('Firefox')}}</a>
+            <a href="{{ url('firefox.family.index') }}" data-link-type="nav" data-link-name="Firefox">{{_('Firefox')}}</a>
           </li>
           <li class="last donate-item">
-            <a data-link-type="donate" data-element-location="nav click" href="{{ donate_url('header') }}">{{_('Donate')}}</a>
+            <a href="{{ donate_url('header') }}" data-link-type="nav" data-link-name="Donate">{{_('Donate')}}</a>
           </li>
         </ul>
       </nav>
@@ -314,7 +314,7 @@
         </li>
       </ul>
 
-      <a class="contribute-btn" href="{{ url('mozorg.contribute') }}" data-element-location="button-click" data-link-type="Get Involved with Mozilla today">
+      <a class="contribute-btn" href="{{ url('mozorg.contribute') }}" data-link-type="button" data-link-name="Get Involved with Mozilla today">
         {{ _('Get Involved with Mozilla today') }}
       </a>
     </div>
