--- a/bedrock/firefox/templates/firefox/pocket.html
+++ b/bedrock/firefox/templates/firefox/pocket.html
@@ -48,7 +48,7 @@
       <p class="main-cta" id="cta-learn"><a href="https://support.mozilla.org/kb/where-pocket-button-firefox" class="button-flat">{{ _('Learn more') }}</a></p>
 
       {# Old Firefox or Not Firefox #}
-      <p class="main-cta" id="cta-download"><a href="{{ url('firefox.new') }}?scene=2#download-fx" class="button-flat-green">{{ _('Download Firefox') }}</a></p>
+      <p class="main-cta" id="cta-download"><a href="{{ url('firefox.new') }}?scene=2" class="button-flat-green">{{ _('Download Firefox') }}</a></p>
 
     </div>
   </section>
