--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -106,7 +106,7 @@
         </div>
 
         <div class="show-fx-28-older">
-          <a href="{{ url('firefox.new') }}?scene=2#download-fx" class="sync-button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-firefox">
+          <a href="{{ url('firefox.new') }}?scene=2" class="sync-button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-firefox">
             {{ _('Download Firefox') }}
           </a>
         </div>
