update bug bounty award pages with corrected names

--- a/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
@@ -59,7 +59,7 @@
         <h4>2nd Quarter 2015</h4>
           <ul>
             <li>Fernando Munoz</li>
-            <li>Harsha Vardhan</li>
+            <li>Harsha Boppana</li>
             <li>Mario Gomes</li>
             <li>Omer Iqbal</li>
             <li>Yassine ABOUKIR</li>
@@ -89,6 +89,7 @@
           <h4>3rd Quarter 2014</h4>
           <ul>
             <li>Mario Gomes</li>
+            <li>Narendra Bhati</li>
             <li>Netanel Rubin</li>
             <li>schuenjia</li>
             <li>Sergey</li>
@@ -138,7 +139,7 @@
           </ul>
           <h4>2nd Quarter 2013</h4>
           <ul>
-            <li>coolsiddheshgawade</li>
+            <li>Siddesh Gawde</li>
             <li>Frans Rosen</li>
             <li>Gschmitz</li>
             <li>Jack W</li>
