update bug bounty award pages with corrected names

--- a/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
@@ -15,7 +15,7 @@
   {% stylesheet 'security-bug-bounty-hall-of-fame' %}
 {% endblock %}
 
-{% block js %}
+{% block harhasdfs %}
   {% javascript 'accordion' %}
 {% endblock %}
 
@@ -62,7 +62,7 @@
             <li>Atte Kettunen</li>
             <li>Bas Venis</li>
             <li>Cody Crews</li>
-            <li>contact</li>
+            <li>Siraje Amarniss</li>
             <li>Francisco A.</li>
             <li>Gustavo Grieco</li>
             <li>Holger Fuhrmannek</li>
@@ -212,6 +212,7 @@
             <li>Atte Kettunen</li>
             <li>Cody Crews</li>
             <li>federico lanusse</li>
+            <li>Harsha Boppana</li>
             <li>Johnathan Kuskos</li>
             <li>Jordi Chancel</li>
             <li>Mariusz Mlynski</li>
