fixed typo in hall-of-fame.html

--- a/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
@@ -15,7 +15,7 @@
   {% stylesheet 'security-bug-bounty-hall-of-fame' %}
 {% endblock %}
 
-{% block harhasdfs %}
+{% block js %}
   {% javascript 'accordion' %}
 {% endblock %}
 
