[fix bug 1251283] Update Hello FTU for Firefox 45

--- a/media/css/firefox/hello/index-2016.less
+++ b/media/css/firefox/hello/index-2016.less
@@ -5,6 +5,8 @@
 @import "../../sandstone/lib.less";
 @import "../newsletter-test.less";
 
+/*! updated 2016-03-02 */
+
 #outer-wrapper {
     background: @mozIDBlue;
 }
