--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -220,9 +220,9 @@
           <a data-id="android" href="{{ url('firefox.android.index') }}" class="primary-link" data-link-type="nav" data-link-name="for Android"><div>{{ _('<span>for</span> Android') }}</div></a>
 
           <ul class="subnav" id="android-subnav">
-            <li><a href="{{ url('firefox.android.index') }}"{% if activesub == 'index' %} class="selected"{% endif %}><div>{{ _('Overview') }}</div></a></li>
-            <li><a href="{{ url('firefox.sync') }}"{% if activesub == 'sync' %} class="selected"{% endif %}><div>{{ _('Sync') }}</div></a></li>
-            <li><a href="{{ url('firefox.private-browsing') }}"{% if activesub == 'private-browsing' %} class="selected"{% endif %}><div>{{ _('Private Browsing') }}</div></a></li>
+            <li><a href="{{ url('firefox.android.index') }}"{% if activesub == 'index' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for Android: Overview"><div>{{ _('Overview') }}</div></a></li>
+            <li><a href="{{ url('firefox.sync') }}"{% if activesub == 'sync' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for Android: Sync"><div>{{ _('Sync') }}</div></a></li>
+            <li><a href="{{ url('firefox.private-browsing') }}"{% if activesub == 'private-browsing' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for Android: Private Browsing"><div>{{ _('Private Browsing') }}</div></a></li>
           </ul>
         </li>
         <li{% if activeprimary == 'ios' %} class="active"{% endif %}>
@@ -254,19 +254,19 @@
       <div class="triangle-border"></div>
 
       <ul class="tertiarynav{% if activeprimary == 'desktop' %} active{% endif %}">
-        <li><a href="{{ url('firefox.dnt') }}" data-ga="desktop - dnt" data-link-type="nav" data-link-name="Side Menu: Do Not Track">{{ _('Do Not Track') }}</a></li>
-        <li><a href="{{ url('firefox.interest-dashboard') }}" data-ga="desktop - interest dashboard" data-link-type="nav" data-link-name="Side Menu: Interest Dashboard">{{ _('Interest Dashboard') }}</a></li>
-        <li><a href="{{ url('firefox.developer') }}" data-ga="desktop - developer edition" data-link-type="nav" data-link-name="Side Menu: Developer Edition">{{ _('Developer Edition') }}</a></li>
-        <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-ga="desktop - private browsing" data-link-type="nav" data-link-name="Side Menu: Private Browsing">{{ _('Private Browsing') }}</a></li>
-        <li><a rel="external" href="https://addons.mozilla.org" data-ga="desktop - addons" data-link-type="nav" data-link-name="Side Menu: Add-ons">{{ _('Add-ons') }}</a></li>
-        <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="desktop - support" data-link-type="nav" data-link-name="Side Menu: Need help?">{{ _('Need help?') }}</a></li>
+        <li><a href="{{ url('firefox.dnt') }}" data-link-type="nav" data-link-name="Side Menu: Do Not Track">{{ _('Do Not Track') }}</a></li>
+        <li><a href="{{ url('firefox.interest-dashboard') }}" data-link-type="nav" data-link-name="Side Menu: Interest Dashboard">{{ _('Interest Dashboard') }}</a></li>
+        <li><a href="{{ url('firefox.developer') }}" data-link-type="nav" data-link-name="Side Menu: Developer Edition">{{ _('Developer Edition') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-link-type="nav" data-link-name="Side Menu: Private Browsing">{{ _('Private Browsing') }}</a></li>
+        <li><a rel="external" href="https://addons.mozilla.org" data-link-type="nav" data-link-name="Side Menu: Add-ons">{{ _('Add-ons') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-link-type="nav" data-link-name="Side Menu: Need help?">{{ _('Need help?') }}</a></li>
       </ul>
 
       <ul class="tertiarynav{% if activeprimary == 'android' %} active{% endif %}">
-        <li><a href="{{ url('firefox.dnt') }}" data-ga="android - dnt">{{ _('Do Not Track') }}</a></li>
-        <li><a rel="external" href="https://www.youtube.com/watch?v=Ewk0YtFTBec&amp;list=PLA8ABF6B7A66A0C5E&amp;index=15" data-ga="android - private browsing">{{ _('Private Browsing') }}</a></li>
-        <li><a rel="external" href="https://addons.mozilla.org/android/" data-ga="android - addons">{{ _('Add-ons') }}</a></li>
-        <li><a rel="external" href="https://support.mozilla.org/products/mobile" data-ga="android - support">{{ _('Need help?') }}</a></li>
+        <li><a href="{{ url('firefox.dnt') }}" data-link-type="nav" data-link-name="Side Menu: Do Not Track">{{ _('Do Not Track') }}</a></li>
+        <li><a rel="external" href="https://www.youtube.com/watch?v=Ewk0YtFTBec&amp;list=PLA8ABF6B7A66A0C5E&amp;index=15" data-link-type="nav" data-link-name="Side Menu: Private Browsing">{{ _('Private Browsing') }}</a></li>
+        <li><a rel="external" href="https://addons.mozilla.org/android/" data-link-type="nav" data-link-name="Side Menu: Android Add-ons">{{ _('Add-ons') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/mobile" data-link-type="nav" data-link-name="Side Menu: Need help?">{{ _('Need help?') }}</a></li>
       </ul>
 
       <ul class="tertiarynav{% if activeprimary == 'ios' %} active{% endif %}">
@@ -349,7 +349,7 @@
               <input id="id-input" name="phone-or-email" type="text" required>
             </div>
             <div class="form-submit">
-              <button type="submit" class="button-flat">{{ _('Send') }}</button>
+              <button type="submit" class="button-flat" data-download-os="Android">{{ _('Send') }}</button>
             </div>
           </div>
           <p class="legal sms">
@@ -378,7 +378,7 @@
           <a class="more" href="{{ ios_link }}">{{ _('Go to the App Store')}}</a>
         </li>
         <li class="google-play">
-          <a class="more" href="{{ android_link }}">{{ _('Go to Google Play')}}</a>
+          <a class="more" href="{{ android_link }}" data-link-type="download" data-download-os="Android">{{ _('Go to Google Play')}}</a>
         </li>
       </ul>
     </footer>
