--- a/bedrock/firefox/templates/firefox/android/index.html
+++ b/bedrock/firefox/templates/firefox/android/index.html
@@ -34,10 +34,10 @@
 {% block site_header_unwrapped %}
   {% call fxfamilynav('android', 'index') %}
     <div class="{% if has_widget %}show-widget{% endif %}">
-      <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}">
+      <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android">
         {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
       </a>
-      <button class="send-to button-flat-dark" type="button">{{ _('Get Firefox for Android') }}</button>
+      <button class="send-to button-flat-dark" type="button" data-button-name="Get Firefox for Android">{{ _('Get Firefox for Android') }}</button>
     </div>
   {% endcall %}
 {% endblock %}
@@ -61,7 +61,7 @@
       <div class="{% if has_widget %}show-widget{% endif %}">
         {{ send_to_device(platform='android', include_logo=False) }}
 
-        <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-button-type="download" data-interaction="download click" data-download-version="Firefox for Android">
+        <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android">
           {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
         </a>
         <small class="download-other">
@@ -390,10 +390,10 @@
         <div id="download-content">
           <h3>{{ _('Choose Firefox') }}</h3>
           <div id="send-to-device-footer">
-            <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-button-type="download" data-interaction="button download click" data-download-version="Firefox for Android" data-alt="{{ _('Get Firefox for Android') }}">
+            <a class="dl-button" rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android" data-alt="{{ _('Get Firefox for Android') }}">
               {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
             </a>
-            <button class="send-to button-flat-dark" type="button">{{ _('Get Firefox for Android') }}</button>
+            <button class="send-to button-flat-dark" type="button" data-button-name="Get Firefox for Android">{{ _('Get Firefox for Android') }}</button>
           </div>
           <ul>
             <li>
