[bug 1248040] Update GTM data attributes on Firefox top menu and on download buttons of build_link macro

--- a/bedrock/base/templates/product-all-macros.html
+++ b/bedrock/base/templates/product-all-macros.html
@@ -84,7 +84,10 @@
 #}
 {% macro build_link(build, platform, tooltip) %}
   {% if build.platforms[platform] %}
-    <td class="download {{ platform }}"><a href="{{ build.platforms[platform].download_url }}" title="{{ tooltip }}">{{ _('Download') }}</a></td>
+    <td class="download {{ platform }}"><a href="{{ build.platforms[platform].download_url }}" title="{{ tooltip }}"
+    {% if platform == 'android' %}data-link-type="download" data-download-os="Android"
+    {% elif platform == 'ios' %}data-link-type="download" data-download-os="iOS"
+    {% else %}data-link-type="download" data-download-os="Desktop"{% endif %}>{{ _('Download') }}</a></td>
   {% else %}
     <td class="unavailable">{{ _('Not Yet Available') }}</td>
   {% endif %}
