--- a/media/css/legal/legal.less
+++ b/media/css/legal/legal.less
@@ -3,6 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "../sandstone/lib.less";
+@import "../mozorg/newsletter-test.less";
 
 #tabzilla:before {
     background-color: @textColorSecondary;
@@ -10,6 +11,26 @@
 
 #outer-wrapper {
     overflow: hidden; /* Fix the layout on IE */
+}
+
+.newsletter-variant {
+    #wrapper {
+        width: 100%;
+    }
+
+    #masthead,
+    #main-feature,
+    #main-content {
+        width: @widthDesktop;
+
+        @media (max-width: @breakDesktop) {
+            width: @widthTablet;
+        }
+
+        @media (max-width: @breakTablet) {
+            width: @widthMobile;
+        }
+    }
 }
 
 #masthead {
