--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -4,6 +4,7 @@
 
 @import "../../sandstone/lib.less";
 @import "home-grid.less";
+@import "../newsletter-test.less";
 
 @font-face {
     font-family: 'FA-Icons-Home';
@@ -678,7 +679,7 @@ h1, h2, h3, h4, h5, h6 {
     background: #f6f4ec;
 }
 
-#newsletter-form {
+.newsletter-form {
     width: @widthSquareGrid_8 / 2;
     margin: 0 auto;
     padding: 0 0 (@baseLine * 2) 0;
@@ -884,7 +885,7 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 
-    #newsletter-form h3 {
+    .newsletter-form h3 {
         width: 100%;
         padding: (@baseLine * 3) 0 (@baseLine * 2) 0;
     }
@@ -992,7 +993,7 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 
-    #newsletter-form {
+    .newsletter-form {
         .form-title {
             float: none;
             width: auto;
@@ -1047,7 +1048,7 @@ h1, h2, h3, h4, h5, h6 {
         padding: 0;
     }
 
-    #newsletter-form {
+    .newsletter-form {
         width: 100%;
 
         .form-contents {
@@ -1278,7 +1279,7 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 
-    #newsletter-form h3 {
+    .newsletter-form h3 {
         .font-size(42px);
     }
 }
