--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -1309,10 +1309,12 @@ nav.menu-bar {
 
     h4 {
         .font-size(@largeFontSize);
+        letter-spacing: 0;
     }
 
     h5 {
         .font-size(@baseFontSize);
+        letter-spacing: 0;
     }
 
     dl dt {
