--- a/bedrock/legal/templates/legal/index.html
+++ b/bedrock/legal/templates/legal/index.html
@@ -10,6 +10,12 @@
 
 {% block body_id %}legal-landing{% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('legal-index-optimizely') %}
+     {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block main_feature %}
   <h1 id="main-feature" class="center large">{{ self.page_title() }}</h1>
 {% endblock %}
@@ -71,4 +77,12 @@
     {% endif %}
   </section>
 
+{% endblock %}
+
+{% block email_form %}
+  {% if LANG.startswith('en-') %}
+  <aside id="newsletter-signup" data-ga-label="Get Mozilla updates">
+    {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Get Mozilla updates')) }}
+  </aside>
+  {% endif %}
 {% endblock %}
