--- a/bedrock/mozorg/templates/mozorg/about.html
+++ b/bedrock/mozorg/templates/mozorg/about.html
@@ -19,6 +19,12 @@
   <![endif]-->
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('mozorg-about-optimizely') %}
+     {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block js %}
   {% javascript 'video' %}
   {% javascript 'mosaic' %}
