--- a/bedrock/firefox/templates/firefox/includes/top-menu.html
+++ b/bedrock/firefox/templates/firefox/includes/top-menu.html
@@ -5,6 +5,7 @@
       <ul aria-expanded="false" id="nav-main-features-submenu" class="submenu">
         <li class="first"><a href="{{ url('firefox.desktop.index') }}" tabindex="-1" data-link-type="nav" data-link-name="Firefox: Desktop">{{_('Desktop')}}</a></li>
         <li><a href="{{ url('firefox.android.index') }}" tabindex="-1" data-link-type="nav" data-link-name="Firefox: Android">{{_('Android')}}</a></li>
+        <li><a href="{{ url('firefox.ios') }}" tabindex="-1" data-link-type="nav" data-link-name="Firefox: iOS">{{_('iOS')}}</a></li>
         <li><a href="{{ url('firefox.developer') }}" tabindex="-1" data-link-type="nav" data-link-name="Firefox: Developer Edition">{{ _('Developer Edition') }}</a></li>
         <li>
           <hr>{# <hr> before first sub/minor link #}
