[bug 1240980] Remove legacy Firefox Hello product page

--- a/bedrock/firefox/templates/firefox/hello/index-b.html
+++ b/bedrock/firefox/templates/firefox/hello/index-b.html
@@ -2,9 +2,9 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
-{% extends "firefox/hello/index-2016.html" %}
+{% extends "firefox/hello/index.html" %}
 
-{% set_lang_files "firefox/hello/index-2016" %}
+{% set_lang_files "firefox/hello-2016" %}
 
 {% block email_form_test %}
   {% if LANG.startswith('en-') %}
