--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -6,11 +6,11 @@
 
 {% extends "firefox/base-resp.html" %}
 
-{% set_lang_files "firefox/hello" %}
+{% set_lang_files "firefox/hello-2016" %}
 
-{% block page_title_prefix %}{% endblock %}
-{% block page_title %}{{ _('Firefox Hello — Free, easy video conversations') }}{% endblock %}
-{% block page_desc %}{{ _('Learn all about Firefox Hello and see for yourself how easy it is to have a free video conversation with anyone, anywhere, right from your browser') }}{% endblock %}
+{% block page_title_prefix %}{{ _('Firefox Hello') }} — {% endblock %}
+{% block page_title %}{{ _('Browse the Web with friends') }}{% endblock %}
+{% block page_desc %}{{ _('Use Firefox Hello to browse Web pages with your friends. Make decisions together in real time when planning a trip, shopping and more.') }}{% endblock %}
 {% block page_image %}{{ static('img/firefox/hello/hello-share.jpg') }}{% endblock %}
 {% block body_id %}firefox-hello{% endblock %}
 {% block body_class %}{% endblock %}
@@ -19,254 +19,131 @@
   {% stylesheet 'firefox_hello' %}
 {% endblock %}
 
-{% block js %}
-  <!--[if IE 9]>
-    {% javascript 'firefox_hello_ie9' %}
-  <![endif]-->
-  {% javascript 'firefox_hello' %}
-{% endblock %}
-
 {% block optimizely %}
   {% if waffle.switch('firefox-hello-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
 
-{%
-set share_urls = {
-  'twitter': 'http://mzl.la/1wz83AN',
-  'googleplus': 'https://www.mozilla.org/firefox/hello/?utm_source=Google&utm_medium=social&utm_campaign=Hello&utm_content=WebsiteShare',
-  'facebook': 'https://www.mozilla.org/firefox/hello/?utm_source=Facebook&utm_medium=social&utm_campaign=Hello&utm_content=WebsiteShare'
-}
-%}
-
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {% call fxfamilynav('desktop', 'hello', 'dark') %}
-    <button id="try-hello-nav" class="try-hello">{{ _('Try Hello now') }}</button>
+  {% call fxfamilynav('desktop', 'hello') %}
+    <a class="try-hello-button" href="https://support.mozilla.org/kb/where-firefox-hello-button">{{ _('Try Hello now') }}</a>
+    <a class="nav-download-button button-flat-dark" href="{{ url('firefox.new') }}">{{ _('Download now') }}</a>
   {% endcall %}
 {% endblock %}
 
-{% block string_data %}
-data-try-now="{{ _('Try it now') }}"
-{% endblock %}
-
 {% block content %}
-
-<main role="main">
-  <section id="intro">
+  <div id="try-hello">
     <div class="container">
-      {#-- No-JS/IE fallback image --#}
-      <h2 id="intro-image">{{ _('Firefox Hello') }}</h2>
-
-      <div id="animation-stage">
-        <!--[if gt IE 9]><!-->
-        <div class="svg-wrapper" id="intro-face-wrapper">
-          <div id="intro-face">
-            <div class="intro-face-eye" id="intro-face-eye-left">
-              <div class="intro-face-eyelid"></div>
-              <div class="intro-face-eyeball"></div>
-            </div>
-
-            <div class="intro-face-eye" id="intro-face-eye-right">
-              <div class="intro-face-eyelid"></div>
-              <div class="intro-face-eyeball"></div>
-            </div>
-
-            <div class="anim-sprite" id="intro-face-mouth"></div>
-
-            <svg version="1.1" class="actor" id="intro-face-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 374 357" style="enable-background:new 0 0 374 357;" xml:space="preserve">
-              <g>
-                <path id="intro-face-bubble" d="M187,2C84.8,2,2,74.8,2,164.5c0,44.7,20.5,85.1,53.7,114.5C50,299.3,38.6,326.9,16,353.8
-                  c3.8,6.8,67.4-17.2,112.2-35.3c18.5,5.4,38.2,8.4,58.8,8.4c102.2,0,185-72.7,185-162.5C372,74.8,289.2,2,187,2z"/>
-              </g>
-            </svg>
-          </div>{#-- /#intro-face --#}
-        </div>{#-- /#intro-face-wrapper --#}
-
-        <div class="anim-sprite" id="laptop">
-          <div class="anim-sprite" id="laptop-camera-on"></div>
-        </div>
-
-        <div class="anim-sprite" id="browser">
-          <div id="hello-panel">
-            <div id="hello-panel-contents">
-              <div class="hello-panel-text" id="hello-panel-text1"></div>
-              <div class="hello-panel-text" id="hello-panel-text2"></div>
-              <div class="hello-panel-text last" id="hello-panel-text3"></div>
-              <div id="hello-panel-button"></div>
-            </div>
-          </div>{#-- /#hello-panel --#}
-
-          <div class="chat-window" id="chat-window-green">
-            <div class="anim-sprite green-face" id="chatter-green"></div>
-          </div>
-
-          <div class="chat-window" id="chat-window-blue">
-            <div class="anim-sprite blue-face" id="chatter-blue"></div>
-          </div>
-        </div>{#-- /#browser --#}
-
-        <div id="conversation">
-          <div class="anim-sprite message" id="message-blue1"></div>
-          <div class="anim-sprite message" id="message-green1"></div>
-          <div class="anim-sprite message" id="message-blue2"></div>
-          <div class="anim-sprite message" id="message-green2"></div>
-          <div class="anim-sprite message" id="message-blue3"></div>
-          <div class="anim-sprite message" id="message-green3"></div>
-          <div class="anim-sprite message" id="message-blue4"></div>
-          <div class="anim-sprite message" id="message-green4"></div>
-          <div class="anim-sprite message blue-face" id="message-blue-face"></div>
-          <div class="anim-sprite message green-face" id="message-green-face"></div>
-        </div>
-
-        <div class="anim-sprite" id="wordmark"></div>
-        <!--<![endif]-->
-      </div>{#-- /#animation-stage --#}
-
-      <h1 class="heading-primary">{{ _('As easy as saying hello') }}</h1>
-
-      <h2 class="heading-tertiary">
-        {{ _('Meet Firefox Hello, the easiest way to connect for free over video with anyone, anywhere.') }}
-      </h2>
-
-      <button class="try-hello" id="try-hello-intro">{{ _('Try Firefox Hello') }}</button>
-
-      <aside id="powered-by">
-        {{ _('Powered by %s')|format(high_res_img('firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}
-      </aside>
-
-      {{ share_cta(_('Share'), share_urls, _('Meet Firefox Hello, the easiest way to connect for free over video with anyone, anywhere.'), 'spread-hello', 'sky mini') }}
-    </div>{# /.container #}
-  </section>
-
-  <section id="features">
-    <div class="container">
-      <ul>
-        <li id="feature-simple">
-          <h3 class="heading-tertiary">{{ _('All you need is Firefox') }}</h3>
-
-          <p>
-            {{ _('If you have the latest version of Firefox, you already have Hello.') }}
-            {{ _('There’s no account or sign-in required and nothing extra to download.') }}
-            {% if l10n_has_tag('hello_screen_sharing') %}
-              {{ _('Just send a conversation link to a friend and ask them to click it.')}} <a rel="external" href="https://support.mozilla.org/kb/which-browsers-will-work-firefox-hello-video-chat">{{ _('See which browsers are compatible with Firefox Hello')}}</a>
-            {% else %}
-              {{ _('Just start a conversation, send your friend a link and ask them to click it.') }}
-              {{ _('Simple.') }}
-            {% endif %}
-          </p>
-        </li>
-        {% if l10n_has_tag('hello_screen_sharing') %}
-          <li id="feature-screenshare">
-            <h3 class="heading-tertiary">{{ _('Share and share alike') }}</h3>
-
-            <p>
-              {{ _('Want to show off some new baby pictures?') }}
-              {{ _('Share travel options over the Web?') }}
-              {{ _('Check in on a project from half a world away?') }}
-              {{ _('Screen sharing on Firefox Hello makes it all possible.') }}
-              {{ _('Try it out in your next conversation and share the things that matter most.') }}
-            </p>
-          </li>
+      <header role="banner">
+        {% if LANG.startswith('en-') %}
+          <h1>Plan. Shop. Decide. <strong>Together.</strong></h1>
         {% else %}
-          <li id="feature-invite">
-            <h3 class="heading-tertiary">{{ _('Invite anyone, anywhere') }}</h3>
-
-            <p>
-              {{ _('Hello is super easy to use and your friends and family don’t even need Firefox to join your conversation.') }}
-              {{ _('As long as they have a compatible browser, they’re good to go.') }}
-            </p>
-
-            <a rel="external" href="https://support.mozilla.org/kb/which-browsers-will-work-firefox-hello-video-chat">{{ _('Learn more about compatible browsers') }}</a>
-          </li>
+          <h1>{{ _('Plan. Shop. Decide. Together.') }}</h1>
         {% endif %}
-        <li id="feature-secure">
-          <h3 class="heading-tertiary">{{ _('Safe, secure, protected') }}</h3>
-
-          <p>
-            {{ _('Because Hello is built right into Firefox, you can rest easy knowing that your conversations and information will remain private and secure.') }}
-            {% if l10n_has_tag('hello_screen_sharing') %}
-              {{ _('And thanks to WebRTC-grade encryption, you’ll enjoy an added level of security.')}}
-            {% else %}
-              {{ _('That’s part of our mission, and it’s behind everything we do around here.') }}
-            {% endif %}
-          </p>
-        </li>
-        <li id="feature-account">
-          <h3 class="heading-tertiary">{{ _('Do more with a Firefox Account') }}</h3>
-
-          <p>
-            {{ _('To start a conversation with someone directly, simply create a free Firefox Account or sign in if you have one already &mdash; it’s the same account you use with Sync.') }}
-            {{ _('You can then add contacts to keep them close at hand.') }}
-          </p>
-        </li>
-        <li id="feature-getfx">
-          <h3 class="heading-tertiary">{{ _('Get Firefox to get started') }}</h3>
-
-          <p>
-            {{ _('Want to start using Hello?') }}
-            {{ _('All you need is Firefox &mdash; the open source browser that helps you stay in control of your online life while you stay connected with friends and family.') }}
-            {{ _('Download Firefox to start your first conversation.') }}
-          </p>
-        </li>
-      </ul>
-    </div>{# /.container #}
-  </section>
-
-  <section id="download-try">
-    <div class="container">
-      <div class="ctacopy-wrapper">
-        <h2 class="dltry-copy heading-secondary" id="ctacopy-nonfx">{{ _('Get Firefox and start your first conversation') }}</h2>
-        <h2 class="dltry-copy heading-secondary" id="ctacopy-esrfx">{{ _('You need a different version of Firefox to use Hello.') }}</h2>
-        <h2 class="dltry-copy heading-secondary" id="ctacopy-oldfx">{{ _('Update your Firefox to start using Hello') }}</h2>
-        <h2 class="dltry-copy heading-secondary" id="ctacopy-hellofx">{{ _('Start your first conversation today') }}</h2>
-      </div>
-
-      <div class="cta-wrapper">
-        {% if l10n_has_tag('ios_announce', 'firefox/new') %}
-          <p id="ctacopy-ios">{{ _('Unfortunately, iOS doesn’t support Hello. To start having free video conversations, use Hello on Firefox for desktop, Firefox OS or Firefox for Android.') }}</p>
-        {% endif %}
-        {{ download_firefox(simple=True, dom_id='download-fx') }}
-        <a class="try-hello" id="try-hello-footer" rel="external" href="https://support.mozilla.org/kb/where-firefox-hello-button">{{ _('Try Hello now') }}</a>
-      </div>
-    </div>{# /.container #}
-  </section>
-
-{% if video_url != '' %}
-  <section id="video">
-    <div class="container">
-      <div class="ctacopy-wrapper">
-        <h2 class="heading-secondary">{{ _('Get to know Hello') }}</h2>
-
-        <p>
-          {{ _('Want to reconnect with friends around the world?') }}
-          {{ _('Celebrate a birthday when you can’t be there in person?') }}
-          {{ _('Learn more about Firefox Hello and see for yourself how easy it is to have a free video conversation with anyone, anywhere, right from your browser.') }}
-        </p>
-
-        <p>
-          {{ _('Questions?') }}
-          <a rel="external" href="https://support.mozilla.org/kb/firefox-hello-video-and-voice-conversations-online">{{ _('Visit Mozilla Support') }}</a>
-        </p>
-      </div>
-      <div class="cta-wrapper">
-        <a id="video-link" href="{{ video_url }}.mp4">
-          <img src="{{ static('img/firefox/hello/video-screenshot.jpg') }}" alt="{{ _('Get to know Hello') }}">
-        </a>
-      </div>
-    </div>{# /.container #}
-  </section>
-
-  <div id="video-modal-wrapper">
-    <div id="video-modal">
-      {{ video(video_url + '.mp4', video_url + '.webm', id='hello-video') }}
+        <p class="tagline fx-up-to-date">{{ _('Instantly browse any Web page with a friend.') }}</p>
+        <a class="try-hello-button" href="https://support.mozilla.org/kb/where-firefox-hello-button">{{ _('Try Firefox Hello') }}</a>
+        <img src="{{ static('img/firefox/hello/firefox-hello-logo-white.svg') }}" class="hello-wordmark" alt="Firefox Hello" width="380" data-fallback="true" data-png="{{ static('img/firefox/hello/firefox-hello-logo-white.png') }}">
+      </header>
     </div>
   </div>
-{% endif %}
-</main>
+  <aside id="conditional-download-bar">
+    <div class="container">
+      <h2 class="fx-out-of-date">{{ _('Get the latest version of Firefox to start browsing Web pages with your friends.') }}</h2>
+      <h2 class="non-fx">{{ _('Get Firefox to start browsing Web pages with your friends.') }}</h2>
+      {{ download_firefox(small=True, icon=False, platform='desktop', force_direct=true, dom_id='download-fx-primary') }}
+      <div class="mobile">
+        <h2>{{ _('Use Firefox on your desktop or laptop to start browsing the Web with your friends.') }} <a class="more" href="{{ url('firefox.desktop.index') }}">{{ _('Learn more')}}</a></h2>
+        <a href="{{ url('firefox.desktop.index') }}">
+          <img src="{{ static('img/firefox/hello/desktop-hello.svg') }}" alt="" width="205">
+        </a>
+      </div>
+    </div>
+  </aside>
+  <section id="use-cases">
+    <div class="container">
+      <h2>{{ _('Get on the same page and make faster decisions in real time.') }}</h2>
+      <ul>
+        <li class="plan">
+          <h3>{{ _('Plan a trip') }}</h3>
+          <p>{{ _('Figure out the details when planning a getaway with someone else.') }}</p>
+        </li>
+        <li class="shop">
+          <h3>{{ _('Shop online') }}</h3>
+          <p>{{ _('Share and compare ideas when buying a gift for a mutual friend.') }}</p>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <div id="features">
+    <div class="split-container quick">
+      <section>
+        <h2>{{ _('Quick, easy and ready to go') }}</h2>
+        <ul>
+          <li>{{ _('One click to send your friend an invitation') }}</li>
+          <li>{{ _('No logins, passwords or accounts required') }}</li>
+          <li>{{ _('Nothing extra to download — all you need is Firefox!') }}</li>
+        </ul>
+      </section>
+    </div>
+    <div class="split-container sharing">
+      <section>
+        <h2>{{ _('Made for sharing the Web') }}</h2>
+        <ul>
+          <li>{{ _('Collaborate and make decisions in real time') }}</li>
+          <li>{{ _('Share what you’re looking at, safely and securely') }}</li>
+          <li>{{ _('Invite friends, <a href="%s">even if they don’t use Firefox</a>')|format('https://support.mozilla.org') }}</li>
+        </ul>
+      </section>
+    </div>
+  </div>
+  <section id="share-hello">
+    <div class="container">
+      <div class="fx-up-to-date">
+        <h2>{{ _('Share this page with a friend.') }}</h2>
+        <a class="try-hello-button" href="https://support.mozilla.org/kb/where-firefox-hello-button">{{ _('Try Hello now') }}</a>
+      </div>
+      <h2 class="fx-out-of-date">{{ _('Get the latest version of Firefox to start browsing Web pages with your friends.') }}</h2>
+      <h2 class="non-fx">{{ _('Get Firefox to start browsing Web pages with your friends.') }}</h2>
+      {{ download_firefox(small=True, icon=False, platform='desktop', force_direct=true, dom_id='download-fx-secondary') }}
+      <div class="mobile">
+        <h2>{{ _('Use Firefox on your desktop or laptop to start browsing the Web with your friends.') }} <a class="more" href="{{ url('firefox.desktop.index') }}">{{ _('Learn more')}}</a></h2>
+        <a href="{{ url('firefox.desktop.index') }}">
+          <img src="{{ static('img/firefox/hello/desktop-hello.svg') }}" alt="" width="205">
+        </a>
+      </div>
+    </div>
+  </section>
 
+  {% block email_form_test %}
+    {% if LANG.startswith('en-') %}
+    <aside id="newsletter-subscribe" class="ga-section" data-ga-label="Discover more ways to stay connected with Firefox.">
+      <div class="content container">
+        <header>
+          <h3 class="compact">{{ _('Discover more ways to stay connected<br> with Firefox.') }}</h3>
+        </header>
+        {{ email_newsletter_form(title=' ') }}
+      </div>
+    </aside>
+    {% endif %}
+  {% endblock %}
+
+  <aside id="need-help">
+    <div class="container">
+      {% set support_url = 'https://support.mozilla.org/products/firefox/chat-and-share/firefox-hello-webrtc' %}
+      {% if LANG.startswith('en-') %}
+        <p>Need help with Hello? <a rel="external" href="{{ support_url }}">Visit Mozilla Support</a></p>
+      {% else %}
+        <p>{{ _('Need help with Hello? <a href="%s">Visit Mozilla support</a>.')|format(support_url) }}</p>
+      {% endif %}
+    </div>
+  </aside>
 {% endblock %}
 
 {% block email_form %}{% endblock %}
+
+{% block js %}
+  {% javascript 'firefox_hello' %}
+{% endblock %}
