Bug 1179256: Remove footer from newsletter confirm page

--- a/bedrock/newsletter/templates/newsletter/confirm.html
+++ b/bedrock/newsletter/templates/newsletter/confirm.html
@@ -19,3 +19,5 @@
     <p>{{ _('Something is amiss with our system, sorry! Please try again later.') }}</p>
   {% endif %}
 {% endblock %}
+
+{% block site_footer %}{% endblock %}
